--- a/app/src/main/res/layout/activity_form_mishap.xml
+++ b/app/src/main/res/layout/activity_form_mishap.xml
@@ -52,7 +52,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="10dp"
         android:text="Détails"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
         android:id="@+id/TextImportance"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:text="Urgence"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,16 +136,15 @@
 
     <EditText
         android:id="@+id/locationMishap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="215dp"
+        android:layout_height="47dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
         android:ems="10"
         android:hint="Ex: O+107"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/buildingMishap" />
 
     <EditText
         android:id="@+id/descriptionBox"
@@ -154,6 +153,7 @@
         android:layout_marginBottom="56dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="15dp"
         android:background="@layout/imageview_border"
         android:ems="10"
         android:inputType="textMultiLine"
@@ -168,34 +168,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="10dp"
         android:text="Envoyer l'incident"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionBox" />
 
     <EditText
         android:id="@+id/titleMishap"
-        android:layout_width="wrap_content"
+        android:layout_width="215dp"
         android:layout_height="47dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
+        android:layout_marginTop="130dp"
         android:ems="10"
         android:hint="Ex: prise en panne"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/buildingMishap"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/buildingMishap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="215dp"
+        android:layout_height="47dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
         android:ems="10"
         android:hint="Ex: Templier"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/locationMishap"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleMishap" />
 
     <TextView
         android:id="@+id/TextBatiment"
@@ -221,12 +224,12 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="140dp"
         android:text="Titre"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/titleMishap"
         app:layout_constraintHorizontal_bias="0.907"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageOfTheTypeOfIncident" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
